# WaveSabre

./: .appveyor.yml  CMakeLists.txt
ConvertTheFuck/: CMakeLists.txt
Data/macOS/: Info.plist
Data/macOS/libsndfile/: libsndfile.dylib
Tests/PlayerTest/: CMakeLists.txt  main.cpp
Vsts/: CMakeLists.txt
Vsts/Specimen/: SpecimenEditor.cpp  SpecimenEditor.h
Vsts/Thunder/: ThunderEditor.cpp  ThunderEditor.h
WaveSabreConvert/: CMakeLists.txt
WaveSabreCore/: CMakeLists.txt
WaveSabreCore/include/WaveSabreCore/: Helpers.h  MacOSHelpers.h  Specimen.h  SynthDevice.h  Thunder.h
WaveSabreCore/src/: Adultery.cpp  GmDls.cpp  Helpers.cpp  MacOSHelpers.cpp  Specimen.cpp  SynthDevice.cpp  Thunder.cpp
WaveSabrePlayerLib/: CMakeLists.txt
WaveSabrePlayerLib/src/: SongRenderer.cpp
WaveSabreStandAlonePlayer/: CMakeLists.txt  main.cpp
WaveSabreVstLib/: CMakeLists.txt
WaveSabreVstLib/src/: ImageManager.cpp
